TipoEquipamento